--- a/web/login.html
+++ b/web/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,19 +8,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style-with-prefix.css">
     <style>
-        .srouce{
+        .srouce {
             text-align: center;
             color: #ffffff;
             padding: 10px;
         }
     </style>
 </head>
+
 <body>
 
     <div class="main-container">
         <div class="form-container">
-
-            <div class="srouce"><a title="Learn How to create Beautiful HTML & CSS login page template" href="https://www.w3jar.com/beautiful-html-css-login-page-template/">W3jar.Com</a></div>
 
             <div class="form-body">
                 <h2 class="title">Log in with</h2>
@@ -43,17 +43,18 @@
                     <input type="submit" value="Log In">
 
                 </form>
-
+                <div class="form-footer">
+                    <div>
+                        <span>Don't have an account?</span> <a href="">Sign Up</a>
+                    </div>
+                </div>
             </div><!-- FORM BODY-->
 
-            <div class="form-footer">
-                <div>
-                    <span>Don't have an account?</span> <a href="">Sign Up</a>
-                </div>
-            </div><!-- FORM FOOTER -->
+            <!-- FORM FOOTER -->
 
         </div><!-- FORM CONTAINER -->
     </div>
 
 </body>
+
 </html>
