--- a/webbck/dashboard.html
+++ b/webbck/dashboard.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
-    <title>Ela - Bootstrap Admin Dashboard Template</title>
+    <title>OVictoire</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -757,7 +757,7 @@
             <!-- End Container fluid  -->
             <!-- footer -->
             <footer class="footer"> © 2018 All rights reserved. Template designed by <a
-                    href="https://colorlib.com">Colorlib</a></footer>
+                    href="https://OVictoire.com">OVictoire</a></footer>
             <!-- End footer -->
         </div>
         <!-- End Page wrapper  -->
