--- a/web/add-stadium.html
+++ b/web/add-stadium.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
-    <title>Ela - Bootstrap Admin Dashboard Template</title>
+    <title>OVictoire</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -407,8 +407,8 @@
             </div>
             <!-- End Container fluid  -->
             <!-- footer -->
-            <footer class="footer"> © 2018 All rights reserved. Template designed by <a
-                    href="https://colorlib.com">OVictoire</a></footer>
+            <footer class="footer"> © 2021<a
+                    href="https://OVictoire.com">OVictoire</a></footer>
             <!-- End footer -->
         </div>
         <!-- End Page wrapper  -->
