--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
-    <title>Ela - Bootstrap Admin Dashboard Template</title>
+    <title>OVictoire</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -44,11 +44,9 @@
                 <!-- Logo -->
                 <div class="navbar-header">
                     <a class="navbar-brand" href="index.html">
-                        <!-- Logo icon -->
-                        <b><img src="images/logo.png" alt="homepage" class="dark-logo" /></b>
                         <!--End Logo icon -->
                         <!-- Logo text -->
-                        <span><img src="images/logo-text.png" alt="homepage" class="dark-logo" /></span>
+                        <span><img src="images/logo-text.png" height="30" width="150" alt="homepage" class="dark-logo" /></span>
                     </a>
                 </div>
                 <!-- End Logo -->
@@ -432,7 +430,7 @@
             <!-- End Container fluid  -->
             <!-- footer -->
             <footer class="footer"> © 2018 All rights reserved. Template designed by <a
-                    href="">Colorlib</a></footer>
+                    href="">OVictoire</a></footer>
             <!-- End footer -->
         </div>
         <!-- End Page wrapper  -->
