--- a/web/add-stadium.html
+++ b/web/add-stadium.html
@@ -95,8 +95,10 @@
                             <li> <a class="has-arrow  " href="./dashboard.html" aria-expanded="false"><i
                                         class="fa fa-tachometer"></i><span class="hide-menu">Dashboard</span></a>
                             </li>
-                            <li> <a class="has-arrow  " href="./add-stadium.html" aria-expanded="false"><i
-                                        class="fa fa-tachometer"></i><span class="hide-menu">Add Stadium</span></a>
+                            <li> <a class="has-arrow  " href="./add-stadium.html" aria-expanded="false"><i class="fa fa-futbol-o"></i><span class="hide-menu">Add Stadium</span></a>
+                            </li>
+                            <li> <a class="has-arrow  " href="./add-event.html" aria-expanded="false"><i
+                                class="fa fa-calendar"></i><span class="hide-menu">Add Event</span></a>
                             </li>
 
                         </ul>
